--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mfx-uint",
+  "name": "qb-uint",
   "version": "0.0.1",
   "description": "Variable unsigned integer encodings for javascript",
   "devDependencies": {
