--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "qb-uint",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Variable unsigned integer encodings for javascript",
+  "repository": "quicbit-js/qb-uint",
   "devDependencies": {
     "tape": "^4.6.3",
     "test-kit": "^2.3.0"
